# radonc-vs-dldp

./: README.md  generate-figure-3.py  generate-figure-4.py  generate_figure_3.py  generate_figure_4.py  pyproject.toml  requirements.txt  test_generate_figures.py
.github/workflows/: test.yaml
code/: generate-figure-3.py  generate-figure-4.py  generate-score-data.py  scores.py
data/: raw_rating_ro1-3.csv
