[project]
name = "radonc-vs-dldp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "matplotlib~=3.8.4",
    "numpy~=1.26.4",
    "pandas~=2.2.2",
    "scikit-learn~=1.5.1",
    "seaborn~=0.13.2",
    "simpleitk~=2.3.1",
]
